syntax = "proto1";

// Object
Message Door_{
    required int32 locked = 1;
    required int32 room_id = 2;
}

Message Object_Union_{
    optional Door_ dr = 1;
    // Still unfinished in game_state, will add later
};

Message Tagged_Object_{
    enum object_type_t{
        DOOR = 1;
        // Will add type once game state add theirs
    };  
    required Object_Union_ = 2; 
};

Message Object_{
    required string object_id = 1;
    optional string short_des = 2;
    optional string long_des = 3;
    required Tagged_Object_ = 4;
    optional int32 can_take = 5;
    optional int32 condition;
};





//Room

Message Condition_{
    optional int32 object_id = 1;
    optional string attribute = 2;
    optional int32 attribute_value = 3;
};
    
Message Path_{
    required string room_id = 1;
    repeated Condition_ conditions = 2;
        
};

Message Room_{
    required string room_id = 1;
    optional string short_desc = 2;
    optional string long_desc = 3; 
    repeated string all_objects_t = 4; //List of all object ids in room
    repeated Path_ paths = 5;
};




//Player

Message Player_{
    required int32 player_id = 1;
    optional string username = 2;
    optional int level = 3;
    optional int xp = 4;
    repeated string inventory = 5; //List of all object ids in inventory
    repeated string clothes = 6; //List of all object ids worn by player
    
    


//Game

Message Game_{
    repeated Player_ all_players;
    repeated Room_ all_rooms;
    optional string curr_room; //ID of current room
    optional int32 time_start;

};

